[gd_scene load_steps=6 format=3 uid="uid://c6dbxx5a11eu5"]

[ext_resource type="Shader" path="res://ui/energy/energy_makeup_gauge.gdshader" id="1_sc4pk"]
[ext_resource type="Script" path="res://ui/energy/energy_makeup_gauge.gd" id="2_rkyeh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hh88i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0b4mf"]
shader = ExtResource("1_sc4pk")
shader_parameter/fossil = 10.0
shader_parameter/solar = 10.0
shader_parameter/wind = 10.0
shader_parameter/battery = 10.0
shader_parameter/demand = 30.0
shader_parameter/fossil_color = Color(0.560668, 0.515647, 0.50424, 1)
shader_parameter/solar_color = Color(0.94902, 0.886275, 0.356863, 1)
shader_parameter/wind_color = Color(0.45098, 0.698039, 0.886275, 1)
shader_parameter/battery_color = Color(0.99, 0.50028, 0.4356, 1)
shader_parameter/demand_color = Color(0.392157, 0.815686, 0.486275, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_10pjr"]

[node name="EnergyMakeupGauge" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 22.0
script = ExtResource("2_rkyeh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SupplyCtnr" type="PanelContainer" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_hh88i")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SupplyCtnr"]
layout_mode = 2

[node name="SupplyTitle" type="Label" parent="HBoxContainer/SupplyCtnr/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
text = "Supply"
horizontal_alignment = 2
uppercase = true

[node name="SupplyLbl" type="Label" parent="HBoxContainer/SupplyCtnr/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
text = "50 kW"
horizontal_alignment = 2

[node name="Gauge" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_0b4mf")
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterLine" type="ColorRect" parent="HBoxContainer/Gauge"]
custom_minimum_size = Vector2(2, 22)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.239216, 0.278431, 1)

[node name="DemandCtnr" type="PanelContainer" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_10pjr")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DemandCtnr"]
layout_mode = 2

[node name="DemandTitle" type="Label" parent="HBoxContainer/DemandCtnr/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
text = "Demand"
uppercase = true

[node name="DemandLbl" type="Label" parent="HBoxContainer/DemandCtnr/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
text = "50 kW"

[node name="Legend" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="FossilColor" type="ColorRect" parent="Legend"]
visible = false
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
color = Color(0.392157, 0.388235, 0.396078, 1)

[node name="Fossil" type="Label" parent="Legend"]
visible = false
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
text = "Fossil"
uppercase = true

[node name="SolarColor" type="ColorRect" parent="Legend"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
color = Color(0.901961, 0.886275, 0.584314, 1)

[node name="Solar" type="Label" parent="Legend"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
theme_override_colors/font_color = Color(0.2, 0.239216, 0.278431, 1)
text = "Solar"

[node name="WindColor" type="ColorRect" parent="Legend"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
color = Color(0.407843, 0.760784, 0.827451, 1)

[node name="Wind" type="Label" parent="Legend"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
theme_override_colors/font_color = Color(0.2, 0.239216, 0.278431, 1)
text = "Wind"

[node name="BatteryColor" type="ColorRect" parent="Legend"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
color = Color(1, 0.541176, 0.607843, 1)

[node name="Battery" type="Label" parent="Legend"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
theme_override_colors/font_color = Color(0.2, 0.239216, 0.278431, 1)
text = "Battery"

[node name="DemandColor" type="ColorRect" parent="Legend"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
color = Color(0.415686, 0.32549, 0.431373, 1)

[node name="Demand" type="Label" parent="Legend"]
layout_mode = 2
theme_type_variation = &"SmallCapsLabel"
theme_override_colors/font_color = Color(0.2, 0.239216, 0.278431, 1)
text = "Demand"
